pricing buttons alignment fixed

--- a/upkook_web/apps/cms/pricing/static/pricing/css/custom.css
+++ b/upkook_web/apps/cms/pricing/static/pricing/css/custom.css
@@ -244,7 +244,7 @@
 }
 
 .product-features-table .md-cl--4-col {
-  margin: 0;
+  margin: auto;
 }
 
 .product-features-table h3 {
